# dali-zigbee

./: .gitmodules  CMakeLists.txt  Makefile  README.md  fivefold.js  letsencrypt.pem  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.h  ota.c  ota.h  scenes.c  scenes.h  scenetester  scenetester.c  wifi.c  wifi.h
main/dali/: dali.c  dali.h  dali_bus.c  dali_bus.h
